# old-regen-bot

./: Cargo.toml  README.md
src/: discord.rs  fun.rs  jacob.rs  main.rs  owner.rs  voice.rs  wiki.rs
src/commands/: fun.rs  mod.rs  owner.rs  wiki.rs
src/commands/utils/: utils.rs
src/commands/voice/: music.rs
src/web_interface/: app.rs  mod.rs
static/: 404.html  index.html
static/css/: tailwind.config.js  tailwind.css
