[package]
name = "regen_bot"
version = "0.1.0"
authors = ["RegenJacob <RegenJacob@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.5", features = ["client", "cache", "standard_framework", "voice"] }
tokio = { version = "1.4.0", features = ["full"] }
songbird = { version = "0.1.6", features= ["builtin-queue"] }
mcping = "0.2.0"
uwuify = "0.2.2"
