[package]
name = "regen_bot"
version = "0.1.0"
authors = ["RegenJacob <RegenJacob@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.7", features = ["client", "cache", "standard_framework", "voice"] }
songbird = { version = "0.1.6", features= ["builtin-queue"] }
reqwest = { version = "0.11", features = ["json"] }
mcping = "0.2.0"
uwuify = "0.2.2"
tokio = { version = "1.4.0", features = ["full"] }
serde = "1.0.125"
serde_json = "1.0.64"
serde_derive = "1.0.125"
wikipedia = "0.3.4"
